--- a/easy_pubuliu-master-m/fuild.html
+++ b/easy_pubuliu-master-m/fuild.html
@@ -14,14 +14,7 @@
 			<img src="images/timg (1).gif" />
 			<img src="images/timg (1).gif" />
 		</div>-->
-		<ul class="clearfix">
-			<li><img src="images/timg-(1)_03.png"/></li>
-			<li><img src="images/timg-(1)_05.png"/></li>
-			<li><img src="images/timg-(1)_08.png"/></li>
-			<li><img src="images/timg-(1)_11.png"></li>
-			<li><img src="images/timg-(1)_14.png"/></li>
-			<li><img src="images/timg-(1)_19.png"/></li>
-		</ul>
+		<ul class="clearfix"></ul>
 	</body>
 </html>
 <script src="fuild.js"></script>
